/*
 * Copyright 2021 CloudWeGo Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package thrift

import (
	"strings"
	"testing"

	"github.com/cloudwego/thriftgo/parser"

	"github.com/cloudwego/kitex/internal/test"
	"github.com/cloudwego/kitex/pkg/generic/descriptor"
)

var httpIDL = `
namespace go http

struct Item{
    1: optional i64 id(go.tag = "json:\"id\"")
    2: optional string text
}

struct JsonDict{
}

struct ReqItem{
    1: optional i64 id(go.tag = "json:\"id\"")
    2: optional string text
}


struct BizRequest {
    1: optional i64 v_int64(api.query = 'v_int64', api.vd = "$>0&&$<200")
    2: optional string text(api.body = 'text')
    3: optional i32 token(api.header = 'token')
    4: optional JsonDict json_header(api.header = 'json_header')
    5: optional Item some(api.body = 'some')
    6: optional list<ReqItem> req_items(api.query = 'req_items')
    7: optional i32 api_version(api.path = 'action')
    8: optional i64 uid(api.path = 'biz')
    9: optional list<i64> cids(api.query = 'cids')
    10: optional list<string> vids(api.query = 'vids')
    
    11: required string required_filed
}

struct RspItem{
    1: optional i64 item_id 
    2: optional string text
}
struct BizResponse {
    1: optional string T                             (api.header= 'T') 
    2: optional map<i64, RspItem> rsp_items           (api.body='rsp_items')
    3: optional i32 v_enum                       (api.none = '')
    4: optional list<RspItem> rsp_item_list            (api.body = 'rsp_item_list')
    5: optional i32 http_code                         (api.http_code = '') 
    6: optional list<i64> item_count (api.header = 'item_count')
}

exception Exception{
    1: i32 code
    2: string msg
}

service BizService{
BizResponse BizMethod1(1: BizRequest req) throws (1: Exception err) (api.get = '/life/client/:action/:biz', api.baseurl = 'ib.snssdk.com', api.param = 'true') 
BizResponse BizMethod2(1: BizRequest req)(api.post = '/life/client/:action/:biz', api.baseurl = 'ib.snssdk.com', api.param = 'true', api.serializer = 'form')
BizResponse BizMethod3(1: BizRequest req)(api.post = '/life/client/:action/:biz/more', api.baseurl = 'ib.snssdk.com', api.param = 'true', api.serializer = 'json')
}`

func TestParseHttpIDL(t *testing.T) {
	re, err := parser.ParseString("http.thrift", httpIDL)
	test.Assert(t, err == nil, err)
	svc, err := Parse(re, LastServiceOnly)
	test.Assert(t, err == nil)
	test.Assert(t, len(svc.Functions) == 3)
	bizMethod1 := svc.Functions["BizMethod1"]
	test.Assert(t, bizMethod1.Request.Type == descriptor.STRUCT)
	test.Assert(t, len(bizMethod1.Request.Struct.FieldsByName["req"].Type.Struct.RequiredFields) == 1)
	test.Assert(t, bizMethod1.Request.Struct.FieldsByName["req"].Type.Struct.FieldsByName["required_filed"].Required)
	test.Assert(t, len(bizMethod1.Request.Struct.FieldsByID) == 1)
	test.Assert(t, bizMethod1.Response.Type == descriptor.STRUCT)
	test.Assert(t, len(bizMethod1.Response.Struct.FieldsByID) == 2)
}

var selfReferenceIDL = `
namespace go http

struct A {
    1: A self
}

service B{
    A Foo(1: A req) 
    string Ping(1: string msg)
}
`

func TestSelfReferenceParse(t *testing.T) {
	re, err := parser.ParseString("a.thrift", selfReferenceIDL)
	test.Assert(t, err == nil, err)
	svc, err := Parse(re, LastServiceOnly)
	test.Assert(t, err == nil, err)
	for _, fn := range svc.Functions {
		for _, i := range fn.Request.Struct.FieldsByID {
			_ = i
		}
	}
	_ = svc
}

var notSupportAnnotationIDL = `
namespace go http

struct A {
    1: A self (whoami = '')
}

service B{
    A Foo(1: A req)
    string Ping(1: string msg)
}
`

type notSupportAnnotation struct{}

func (notSupportAnnotation) Equal(key, value string) bool {
	return key == "whoami"
}

func (notSupportAnnotation) Handle() interface{} {
	return 1
}

func TestNotSupportAnnotation(t *testing.T) {
	descriptor.RegisterAnnotation(notSupportAnnotation{})
	re, err := parser.ParseString("a.thrift", notSupportAnnotationIDL)
	test.Assert(t, err == nil)
	_, err = Parse(re, LastServiceOnly)
	test.Assert(t, err != nil)
}

var multiServicesIDL = `
namespace go test

service A {
	string method1(1: string req)
}

service B {
	string method2(1: string req)
}
`

func TestCombineService(t *testing.T) {
	content := multiServicesIDL
	tree, err := parser.ParseString("a.thrift", content)
	test.Assert(t, err == nil)

	dp, err := Parse(tree, LastServiceOnly)
	test.Assert(t, err == nil)
	test.Assert(t, dp.Name == "B")
	test.Assert(t, len(dp.Functions) == 1 && dp.Functions["method2"] != nil)

	dp, err = Parse(tree, CombineServices)
	test.Assert(t, err == nil)
	test.Assert(t, dp.Name == "CombinedServices")
	test.Assert(t, len(dp.Functions) == 2 && dp.Functions["method1"] != nil && dp.Functions["method2"] != nil)

	content = strings.ReplaceAll(content, "method2", "method1")
	tree, err = parser.ParseString("a.thrift", content)
	test.Assert(t, err == nil)

	dp, err = Parse(tree, CombineServices)
	test.Assert(t, err != nil && dp == nil)
	test.Assert(t, err.Error() == "duplicate method name: method1")
}

const baseIDL = `
namespace * base

struct BaseStruct {
    1: string def
    2: required string req
    3: optional string opt
}

service BaseService {
    BaseStruct simple(1: BaseStruct req)
}
`

const demoIDL = `
namespace * demo

include "base.thrift"

struct Request {
    1: string str
    2: required string str2
    3: optional string str3
}

struct Response {
    1: string str
    2: required string str2
    3: optional string str3
}

exception Exception {
    1: string error
    2: required string error2
    3: optional string error3
}

service DemoBaseService extends base.BaseService {
    binary int2bin(1: i32 arg);
}

service DemoService extends DemoBaseService {
    Response req2res(1: Request req);
}

`

func TestExtends(t *testing.T) {
	demo, err := parser.ParseString("demo.thrift", demoIDL)
	test.Assert(t, err == nil)

	base, err := parser.ParseString("base.thrift", baseIDL)
	test.Assert(t, err == nil)

	demo.Includes[0].Reference = base

	dp, err := Parse(demo, LastServiceOnly)
	test.Assert(t, err == nil)
	test.Assert(t, dp.Name == "DemoService")
	test.Assert(t, len(dp.Functions) == 3)
	for _, fn := range []string{"simple", "int2bin", "req2res"} {
		test.Assert(t, dp.Functions[fn] != nil)
	}

	dp, err = Parse(demo, FirstServiceOnly)
	test.Assert(t, err == nil)
	test.Assert(t, dp.Name == "DemoBaseService")
	test.Assert(t, len(dp.Functions) == 2)
	for _, fn := range []string{"simple", "int2bin"} {
		test.Assert(t, dp.Functions[fn] != nil)
	}

	dp, err = Parse(demo, CombineServices)
	test.Assert(t, err == nil)
	test.Assert(t, dp.Name == "CombinedServices")
	test.Assert(t, len(dp.Functions) == 3)
	for _, fn := range []string{"simple", "int2bin", "req2res"} {
		test.Assert(t, dp.Functions[fn] != nil)
	}
}
